force-app/main/default/objects/Product_Line__c/Product_Line__c.object-meta.xml
<CustomObject>
    <label>Product Line</label>
    <nameField>
        <displayFormat>PRO-LINE-{0000}</displayFormat>
        <label>Product Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>