force-app/main/default/objects/Product_Line__c/fields/Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Amount_Number__c</fullName>
    <description>Technical field used for roll up summary. Display Roll-Up Summary currency fields on Accounts and Opportunities with Advanced Currency Management enabled</description>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Number)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>