force-app/main/default/objects/Product_Line__c/fields/Other_Line__c.field-meta.xml
<CustomField>
    <fullName>Other_Line__c</fullName>
    <inlineHelpText>Add other Product Line name if you have chosen Other option.</inlineHelpText>
    <label>Other Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>