force-app/main/default/objects/Product_Line__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research</label>
    <type>Checkbox</type>
</CustomField>