force-app/main/default/objects/Product_Line__c/validationRules/ProductLineReaserchProbability0.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductLineReaserchProbability0</fullName>
    <active>true</active>
    <description>For Product Lines with Research checked, Probability must be set to 0%.</description>
    <errorConditionFormula>Research__c 
&amp;&amp;
Probability__c !=0</errorConditionFormula>
    <errorDisplayField>Probability__c</errorDisplayField>
    <errorMessage>For Product Lines with Reaserch checked, Probability must be set to 0%.</errorMessage>
</ValidationRule>